# CSE5914

./: .gitignore  00_START_HERE.md  ARCHITECTURE_DIAGRAMS.md  DOCUMENTATION_INDEX.md  GITHUB_INTEGRATION.md  GITHUB_INTEGRATION_REFERENCE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_VISUAL.txt  QUICKSTART_GITHUB.md  README.md  README_GITHUB_INTEGRATION.md
.github/workflows/: deploy.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
backend/: .dockerignore  .firebaserc  Dockerfile  MULTIMODAL_RAG.md  README.md  check_collections.py  firebase.json  package-lock.json  pyproject.toml  test_docling_direct.py  test_extract_images.py  test_multimodal_context.py
backend/app/: main.py
backend/app/api/: routes_arxiv.py  routes_compare.py  routes_docling.py  routes_gemini.py  routes_health.py  routes_library.py  routes_openalex.py  routes_papers.py  routes_users.py
backend/app/core/: config.py  firebase_client.py
backend/app/models/: codebase.py  paper.py  user.py
backend/app/services/: agent_service.py  chroma_service.py  comparison_service.py  docling_service.py  embedding_service.py  gemini_service.py  github_service.py  paper_service.py  section_utils.py  user_service.py
backend/chroma/: chroma.sqlite3
backend/chroma/f251589c-eef6-4458-80e5-9bc3a8dc1418/: index_metadata.pickle
backend/dataconnect/: README.md  dataconnect.yaml  seed_data.gql
backend/dataconnect/example/: mutations.gql  queries.gql
backend/dataconnect/schema/: schema.gql
backend/src/dataconnect-generated/: README.md  index.cjs.js  index.d.ts
backend/src/dataconnect-generated/.guides/: usage.md
backend/src/dataconnect-generated/esm/: index.esm.js
backend/tests/: test_arxiv.py  test_docling_api.py  test_extract_images.py  test_gemini_rag.py  test_github_integration.py  test_images.ps1  test_openalex.py  test_smoke.py
chroma/: chroma.sqlite3
dataconnect/: dataconnect.yaml
frontend/: .dockerignore  .firebaserc  .gcloudignore  DEPLOY.md  Dockerfile  README.md  app.yaml  apphosting.yaml  empty-module.js  http_requests.yaml  index.js  next.config.ts  package-lock.json  package.json  sample_env.txt
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: LoginButton.tsx  Navbar.tsx  Providers.tsx
frontend/contexts/: UserContext.tsx
frontend/lib/: firebase.ts  (+2 more)
(+161 files in other folders)
